force-app/main/default/objects/Plane__c/Plane__c.object-meta.xml
<CustomObject>
    <label>Plane</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Plane Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Planes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>