force-app/main/default/objects/Plane__c/fields/FullName__c.field-meta.xml
<CustomField>
    <fullName>FullName__c</fullName>
    <formula>Text(Manufacture__c) + 
&apos; &apos; +  
Model__c + 
IF(ISBLANK(Modification__c) , &apos;&apos;, &apos;-&apos;) +
Modification__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>