force-app/main/default/objects/Plane__c/fields/Manufacture__c.field-meta.xml
<CustomField>
    <fullName>Manufacture__c</fullName>
    <label>Manufacture</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Manufacturer</valueSetName>
    </valueSet>
</CustomField>