force-app/main/default/objects/Plane__c/fields/MaxCruiseSpeed__c.field-meta.xml
<CustomField>
    <fullName>MaxCruiseSpeed__c</fullName>
    <label>Max Cruise Speed</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>