force-app/main/default/objects/Plane__c/fields/MaxWeight__c.field-meta.xml
<CustomField>
    <fullName>MaxWeight__c</fullName>
    <label>Max Weight</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>