force-app/main/default/objects/Plane__c/fields/Modification__c.field-meta.xml
<CustomField>
    <fullName>Modification__c</fullName>
    <label>Modification</label>
    <length>20</length>
    <type>Text</type>
</CustomField>