force-app/main/default/objects/Plane__c/fields/Passengers__c.field-meta.xml
<CustomField>
    <fullName>Passengers__c</fullName>
    <label>Passengers</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>