force-app/main/default/objects/Plane__c/fields/Range__c.field-meta.xml
<CustomField>
    <fullName>Range__c</fullName>
    <label>Range</label>
    <length>5</length>
    <type>Text</type>
</CustomField>