force-app/main/default/objects/Plane__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>FullName__c</columns>
    <columns>Range__c</columns>
    <columns>Passengers__c</columns>
    <columns>MaxWeight__c</columns>
    <columns>MaxCruiseSpeed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>